devtools/laymos/test/fixtures/story-ejection/invalid/dynamic-import.ts
export const story = import('laymos/story');
